build_log_4.txt
> Task :app:clean
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:generateDebugResValues
> Task :app:dataBindingMergeDependencyArtifactsDebug
> Task :app:generateDebugResources
> Task :app:packageDebugResources
> Task :app:dataBindingTriggerDebug
> Task :app:parseDebugLocalResources
> Task :app:generateSafeArgsDebug
> Task :app:checkDebugAarMetadata
> Task :app:mapDebugSourceSetPaths
> Task :app:createDebugCompatibleScreenManifests
> Task :app:extractDeepLinksDebug
> Task :app:processDebugMainManifest
> Task :app:processDebugManifest
> Task :app:mergeDebugShaders
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets
> Task :app:compressDebugAssets
> Task :app:desugarDebugFileDependencies
> Task :app:javaPreCompileDebug
> Task :app:mergeDebugJniLibFolders
> Task :app:mergeDebugNativeLibs NO-SOURCE
> Task :app:stripDebugDebugSymbols NO-SOURCE
> Task :app:validateSigningDebug
> Task :app:checkDebugDuplicateClasses
> Task :app:writeDebugAppMetadata
> Task :app:processDebugManifestForPackage
> Task :app:writeDebugSigningConfigVersions
> Task :app:mergeLibDexDebug
> Task :app:mergeExtDexDebug
> Task :app:mergeDebugResources
> Task :app:dataBindingGenBaseClassesDebug
> Task :app:processDebugResources
> Task :app:kspDebugKotlin
> Task :app:compileDebugKotlin

> Task :app:compileDebugJavaWithJavac FAILED
D:\Documents\HustleApp\app\build\generated\ap_generated_sources\debug\out\com\example\hustleapp\DataBinderMapperImpl.java:24: error: cannot find symbol
import com.example.hustleapp.databinding.FragmentProfileBindingImpl;
                                        ^
  symbol:   class FragmentProfileBindingImpl
  location: package com.example.hustleapp.databinding

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> android.databinding.tool.util.LoggedErrorException: Found data binding error(s):
  
  ERROR: Cannot find a setter for <android.widget.ImageView app:avatarUrl> that accepts parameter type 'java.lang.String'
  
  If a binding adapter provides the setter, check that the adapter is annotated correctly and that the parameter type matches. file://app\src\main\res\layout\fragment_profile.xml Line:44


* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to get full insights.
> Get more help at https://help.gradle.org.

BUILD FAILED in 16s
33 actionable tasks: 33 executed
